Adding getBcc functionality with test

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,4 +6,9 @@
             <directory suffix="Test.php">./tests/</directory>
         </testsuite>
     </testsuites>
+    <php>
+        <env name="EMAIL_SERVER" value="some.host.com"/>
+        <env name="EMAIL_USERNAME" value="someusername"/>
+        <env name="EMAIL_PASSWORD" value="somepassword"/>
+    </php>
 </phpunit>
