--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require": {
         "php": ">=5.4.0",
         "ext-imap": "*",
-        "ddeboer/transcoder": "~1"
+        "devmastersbv/transcoder": "~1"
     },
     "require-dev": {
         "ext-mbstring": "*",
